router/apollo-router/src/query_planner/snapshots/apollo_router__query_planner__tests__alias_renaming.snap
---
source: apollo-router/src/query_planner/tests.rs
expression: "serde_json::to_value(&response).unwrap()"
---
{
  "data": {
    "testQuery": {
      "foo": {
        "field": "aaa"
      }
    }
  }
}
